# vertex-program

./: .gitignore  Anchor.toml  READEME.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
.husky/: pre-commit
accounts/dev/: contract-keypair.json  deployer.json
programs/vertex-program/: Cargo.toml
programs/vertex-program/src/: lib.rs  program_id.rs
programs/vertex-program/src/common/: constant.rs  error.rs  event.rs  mod.rs
programs/vertex-program/src/instructions/: deposit.rs  init_indexer.rs  init_user_vault.rs  mod.rs  withdraw_indexer_fee.rs
programs/vertex-program/src/instructions/admin/: charge_fee.rs  commit_and_start_billing.rs  delegate_user_vault.rs  init_system_vault.rs  mod.rs  track_user_activity.rs  transfer_read_fee.rs  withdraw_fee.rs
programs/vertex-program/src/states/: indexer.rs  mod.rs  system_authority.rs  system_vault.rs  user_vault.rs
programs/vertex-program/src/utils/: magic_block.rs  math.rs  mod.rs  token_transfer.rs
scripts/: constant.ts  get-program.ts
scripts/operator/: parse-event-from-transaction.ts  withdraw-fee.ts
scripts/user/: deposit.ts  get-user-vault.ts  init-indexer.ts  init-user-vault.ts
sdk/: index.ts
sdk/common/: constant.ts
sdk/instructions/: charge-fee.instruction.ts  deposit.instruction.ts  index.ts  init-indexer.instruction.ts  init-user-vault.instruction.ts  withdraw-indexer-fee.instruction.ts
sdk/state/: index.ts  indexer.ts  system-authority.ts  user-vault.ts
sdk/utils/: index.ts  number.ts  program.ts  seeds.ts
tests/: vertex-program.ts
tests/accounts/: index.ts
(+18 files in other folders)
